--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Cleek, Hamilton (Fictitious character) -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Police -- Great Britain -- Fiction'
+- GITenberg
 title: The Riddle of the Frozen Flame
 url: http://www.gutenberg.org/ebooks/17180
